AP-40: Fixed radio buttons layout issue

--- a/src/Modules/Settings/Dnn.PersonaBar.Security/Security.Web/src/components/ipFilters/ipFilterEditor/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.Security/Security.Web/src/components/ipFilters/ipFilterEditor/style.less
@@ -25,6 +25,7 @@
             }
             .dnn-radio-buttons {
                 float: left;
+                width: 300px;
                 margin: 9px 0 0 30px;
                 label {
                     font-size: 14px;
